8273594: [lworld] JITs need to properly handle static inline type field with unloaded type