src/hotspot/share/ci/ciTypeFlow.cpp
@@ -670,6 +670,12 @@ void ciTypeFlow::StateVector::do_getstatic(ciBytecodeStream* str) {
   } else {
     ciType* field_type = field->type();
     if (!field_type->is_loaded()) {
+      if (field->is_static() && field->is_null_free()) {
+        // Deoptimize if we load from a static field with an unloaded
+        // inline type because we need the default value if the field is null.
+        trap(str, field_type->as_klass(), str->get_field_signature_index());
+        return;
+      }
       // Normally, we need the field's type to be loaded if we are to
       // do anything interesting with its value.
       // We used to do this:  trap(str, str->get_field_signature_index());
